--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [
     {include = "wit", from = "src"}, 
     {include = "sync", from = "src"}, 
     {include = "web", from = "src"}, 
-    {include = "runtime", from = "src"}
+    {include = "runtime", from = "src"},
 ]
 repository = "https://github.com/lukebuehler/agent-os"
 
@@ -35,6 +35,10 @@ jinja2 = "^3.1.2"
 click = "^8.1.5"
 openai = "^0.27.8"
 pandas = "^1.5.3"
+requests = "^2.31.0"
+pillow = "^10.0.0"
+scikit-learn = "^1.3.0"
+transitions = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -47,3 +51,4 @@ asyncio_mode = "auto"
 aos = "src.cli:cli"
 cli = "src.cli:cli"
 perf = "tests.perf.perf:main"
+gen = "examples.coder.generator.gen_workbench:main"
