--- a/examples/coder/sync.toml
+++ b/examples/coder/sync.toml
@@ -1,17 +1,17 @@
 [agent]
-name = "chatbot"
+name = "coder"
 
 [all]
-push="./examples/chatbot/common:/common"
+push="./examples/coder/common:/code/common"
 
 [[actors]]
 name="frontend"
-push="./examples/chatbot/frontend:/"
-wit="/:frontend_wit:app"
-wit_query="/:frontend_queries:app"
+push="./examples/coder/frontend:/code"
+wit="/code:frontend_wit:app"
+wit_query="/code:frontend_queries:app"
 
 [[actors]]
-name="head"
-push="./examples/chatbot/head:/"
-wit="/:head_wit:app"
+name="generator"
+push="./examples/coder/generator:/code"
+wit="/code:gen_wit:app"
 notify="frontend"
