--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ requests = "^2.31.0"
 pillow = "^10.0.0"
 scikit-learn = "^1.3.0"
 transitions = "^0.9.0"
+markdown = "^3.4.4"
+beautifulsoup4 = "^4.12.2"
+mistune = "^3.0.1"
 
 [build-system]
 requires = ["poetry-core"]
