--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,6 @@ sse-starlette = "^1.6.1"
 uvicorn = "^0.22.0"
 httpx = "^0.24.1"
 httpx-sse = ">=0.3.0,<0.4.0"
-python-magic = "^0.4.27"
 jinja2 = "^3.1.2"
 click = "^8.1.5"
 openai = "^0.27.8"
@@ -39,9 +38,9 @@ requests = "^2.31.0"
 pillow = "^10.0.0"
 scikit-learn = "^1.3.0"
 transitions = "^0.9.0"
-markdown = "^3.4.4"
 beautifulsoup4 = "^4.12.2"
 mistune = "^3.0.1"
+filetype = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core"]
