--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,9 @@ beautifulsoup4 = "^4.12.2"
 mistune = "^3.0.1"
 filetype = "^1.2.0"
 ruff = "^0.0.285"
+yfinance = "^0.2.31"
+matplotlib = "^3.8.0"
+openpyxl = "^3.1.2"
 
 [build-system]
 requires = ["poetry-core"]
