--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ ruff = "^0.0.285"
 yfinance = "^0.2.31"
 matplotlib = "^3.8.0"
 openpyxl = "^3.1.2"
+jsonschema = "^4.19.1"
 
 [build-system]
 requires = ["poetry-core"]
