--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ gen = "examples.coder.generator.gen_workbench:main"
 
 [tool.ruff]
 select = ["E", "F", "B"]
-ignore = ["F403", "F405"]
+ignore = ["F403", "F405", "E501"]
 line-length = 150
 
 [tool.ruff.per-file-ignores]
