--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ python-dotenv = "^1.0.0"
 pydantic = "^2.0.1"
 aiofiles = "^23.1.0"
 async-lru = "^2.0.2"
-pytest = "^7.3.1"
 pytest-asyncio = "^0.21.0"
 tomlkit = "^0.11.8"
 lmdb = "^1.4.1"
@@ -34,24 +33,37 @@ watchfiles = "^0.19.0"
 starlette = "^0.28.0"
 sse-starlette = "^1.6.1"
 uvicorn = "^0.22.0"
-httpx = "^0.24.1"
-httpx-sse = ">=0.3.0,<0.4.0"
-jinja2 = "^3.1.2"
 click = "^8.1.5"
-openai = "^0.27.8"
-pandas = "^1.5.3"
-requests = "^2.31.0"
-pillow = "^10.0.0"
-scikit-learn = "^1.3.0"
-transitions = "^0.9.0"
-beautifulsoup4 = "^4.12.2"
-mistune = "^3.0.1"
 filetype = "^1.2.0"
-ruff = "^0.0.285"
-yfinance = "^0.2.31"
-matplotlib = "^3.8.0"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.1.1"
+httpx = "^0.27.0"
+httpx-sse = "^0.4.0"
+
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.3.7"
+
+
+# to install run poetry install --with agents
+[tool.poetry.group.agents]
+optional = true
+
+[tool.poetry.group.agents.dependencies]
+jinja2 = "^3.1.3"
+openai = "^1.17.0"
+pandas = "^2.2.2"
+requests = "^2.31.0"
+pillow = "^10.3.0"
+scikit-learn = "^1.4.2"
+transitions = "^0.9.0"
+beautifulsoup4 = "^4.12.3"
+mistune = "^3.0.2"
+yfinance = "^0.2.37"
+matplotlib = "^3.8.4"
 openpyxl = "^3.1.2"
-jsonschema = "^4.19.1"
+jsonschema = "^4.21.1"
 
 [build-system]
 requires = ["poetry-core"]
