--- a/agents/demodata/sync.toml
+++ b/agents/demodata/sync.toml
@@ -7,5 +7,5 @@ external_paths=["./agents/demodata/frontend_data"]
 [[actors]]
 name="frontend_data"
 push="./agents/demodata/frontend_data:/code"
-wit="external:frontend_data_queries:app"
-wit_query="external:frontend_data_queries:app"
+wit="external:agents.demodata.frontend_data.frontend_data_queries:app"
+wit_query="external:agents.demodata.frontend_data.frontend_data_queries:app"
