--- a/crates/aos-cbor/Cargo.toml
+++ b/crates/aos-cbor/Cargo.toml
@@ -9,4 +9,7 @@ serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
 sha2 = "0.10"
 hex = "0.4"
+thiserror = "1"
 
+[dev-dependencies]
+serde_json = "1"
