--- a/crates/aos-store/Cargo.toml
+++ b/crates/aos-store/Cargo.toml
@@ -7,5 +7,10 @@ publish = false
 [dependencies]
 aos-cbor = { path = "../aos-cbor" }
 serde = { version = "1", features = ["derive"] }
+serde_cbor = "0.11"
 anyhow = "1"
+thiserror = "1"
+hex = "0.4"
 
+[dev-dependencies]
+tempfile = "3"
