--- a/crates/aos-air-types/Cargo.toml
+++ b/crates/aos-air-types/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
-indexmap = "2"
+serde_json = "1"
+indexmap = { version = "2", features = ["serde"] }
 petgraph = "0.6"
-
+thiserror = "1"
