--- a/crates/aos-effects/Cargo.toml
+++ b/crates/aos-effects/Cargo.toml
@@ -5,5 +5,12 @@ edition = "2024"
 publish = false
 
 [dependencies]
+aos-cbor = { path = "../aos-cbor" }
+aos-air-types = { path = "../aos-air-types" }
+indexmap = { version = "2", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
-
+serde_bytes = "0.11"
+serde_json = "1"
+thiserror = "1"
+hex = "0.4"
+serde_cbor = "0.11"
