--- a/crates/aos-wasm/Cargo.toml
+++ b/crates/aos-wasm/Cargo.toml
@@ -7,4 +7,8 @@ publish = false
 [dependencies]
 aos-wasm-abi = { path = "../aos-wasm-abi" }
 anyhow = "1"
+wasmtime = "17.0.0"
 
+[dev-dependencies]
+serde = { version = "1", features = ["derive"] }
+wat = "1"
