--- a/crates/aos-kernel/Cargo.toml
+++ b/crates/aos-kernel/Cargo.toml
@@ -14,4 +14,8 @@ aos-cbor = { path = "../aos-cbor" }
 aos-store = { path = "../aos-store" }
 anyhow = "1"
 indexmap = "2"
+thiserror = "1"
+serde = { version = "1", features = ["derive"], optional = true }
 
+[dev-dependencies]
+wat = "1"
