--- a/crates/aos-kernel/Cargo.toml
+++ b/crates/aos-kernel/Cargo.toml
@@ -16,6 +16,8 @@ anyhow = "1"
 indexmap = "2"
 thiserror = "1"
 serde = { version = "1", features = ["derive"], optional = true }
+serde_cbor = "0.11"
+serde_json = "1"
 
 [dev-dependencies]
 wat = "1"
