--- a/crates/aos-kernel/Cargo.toml
+++ b/crates/aos-kernel/Cargo.toml
@@ -21,3 +21,8 @@ serde_json = "1"
 
 [dev-dependencies]
 wat = "1"
+
+[lints.rust]
+unused_imports = "allow"
+unused_variables = "allow"
+dead_code = "allow"
