--- a/crates/aos-kernel/Cargo.toml
+++ b/crates/aos-kernel/Cargo.toml
@@ -15,9 +15,11 @@ aos-store = { path = "../aos-store" }
 anyhow = "1"
 indexmap = "2"
 thiserror = "1"
-serde = { version = "1", features = ["derive"], optional = true }
+serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
 serde_json = "1"
+log = "0.4"
+serde_bytes = "0.11"
 
 [dev-dependencies]
 wat = "1"
