--- a/crates/aos-air-types/Cargo.toml
+++ b/crates/aos-air-types/Cargo.toml
@@ -10,3 +10,5 @@ serde_json = "1"
 indexmap = { version = "2", features = ["serde"] }
 petgraph = "0.6"
 thiserror = "1"
+once_cell = "1"
+aos-cbor = { path = "../aos-cbor" }
