--- a/crates/aos-testkit/Cargo.toml
+++ b/crates/aos-testkit/Cargo.toml
@@ -16,3 +16,6 @@ serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
 wat = "1"
 rand = "0.8"
+
+[dev-dependencies]
+tempfile = "3"
