--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # ===========================================================================
 # Project specific .gitignore
 # ===========================================================================
+.DS_Store 
 
 # ===========================================================================
 # Rust.gitignore
