--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # ===========================================================================
 # Project specific .gitignore
 # ===========================================================================
-.DS_Store 
+.DS_Store
+.store/
 
 # ===========================================================================
 # Rust.gitignore
