--- a/crates/aos-examples/Cargo.toml
+++ b/crates/aos-examples/Cargo.toml
@@ -4,4 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1"
+aos-air-types = { path = "../aos-air-types" }
+aos-cbor = { path = "../aos-cbor" }
+aos-kernel = { path = "../aos-kernel" }
+aos-store = { path = "../aos-store" }
+aos-wasm-abi = { path = "../aos-wasm-abi" }
 clap = { version = "4", features = ["derive"] }
+indexmap = "2"
+once_cell = "1"
+serde = { version = "1", features = ["derive"] }
+serde_cbor = "0.11"
