--- a/crates/aos-examples/Cargo.toml
+++ b/crates/aos-examples/Cargo.toml
@@ -10,6 +10,7 @@ aos-cbor = { path = "../aos-cbor" }
 aos-kernel = { path = "../aos-kernel" }
 aos-store = { path = "../aos-store" }
 aos-wasm-abi = { path = "../aos-wasm-abi" }
+aos-effects = { path = "../aos-effects" }
 clap = { version = "4", features = ["derive"] }
 indexmap = "2"
 once_cell = "1"
