--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # ===========================================================================
 .DS_Store
 .store/
+.aos/
 
 # ===========================================================================
 # Rust.gitignore
