--- a/crates/aos-wasm/Cargo.toml
+++ b/crates/aos-wasm/Cargo.toml
@@ -7,9 +7,10 @@ publish = false
 [dependencies]
 aos-wasm-abi = { path = "../aos-wasm-abi" }
 anyhow = "1"
-wasmtime = "36.0.3"
 sha2 = "0.10"
+wasmtime = { version = "36.0.3", features = ["cache"] }
 
 [dev-dependencies]
 serde = { version = "1", features = ["derive"] }
 wat = "1"
+tempfile = "3"
