--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ members = [
   "crates/aos-testkit",
   "crates/aos-cli",
   "crates/aos-examples",
-  "examples/00-counter/reducer",
+  "crates/aos-wasm-build",
   "examples/01-hello-timer/reducer",
-  "examples/02-blob-echo/reducer", "crates/aos-wasm-build",
+  "examples/02-blob-echo/reducer",
 ]
 resolver = "2"
