--- a/crates/aos-examples/Cargo.toml
+++ b/crates/aos-examples/Cargo.toml
@@ -11,9 +11,11 @@ aos-kernel = { path = "../aos-kernel" }
 aos-store = { path = "../aos-store" }
 aos-wasm-abi = { path = "../aos-wasm-abi" }
 aos-effects = { path = "../aos-effects" }
+aos-wasm-build = { path = "../aos-wasm-build" }
 clap = { version = "4", features = ["derive"] }
 indexmap = "2"
 once_cell = "1"
+camino = "1"
 serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
 serde_bytes = "0.11"
