--- a/examples/04-aggregator/reducer/Cargo.toml
+++ b/examples/04-aggregator/reducer/Cargo.toml
@@ -11,5 +11,6 @@ crate-type = ["cdylib"]
 [dependencies]
 aos-air-exec = { path = "../../../crates/aos-air-exec" }
 aos-wasm-abi = { path = "../../../crates/aos-wasm-abi" }
+indexmap = "2"
 serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
