--- a/examples/01-hello-timer/reducer/Cargo.toml
+++ b/examples/01-hello-timer/reducer/Cargo.toml
@@ -9,7 +9,5 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-aos-effects = { path = "../../../crates/aos-effects" }
-aos-wasm-abi = { path = "../../../crates/aos-wasm-abi" }
-serde = { version = "1", features = ["derive"] }
-serde_cbor = "0.11"
+aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
+serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
