refactor fetch-notify

--- a/examples/03-fetch-notify/reducer/Cargo.toml
+++ b/examples/03-fetch-notify/reducer/Cargo.toml
@@ -10,6 +10,6 @@ crate-type = ["cdylib"]
 
 [dependencies]
 aos-air-exec = { path = "../../../crates/aos-air-exec" }
-aos-wasm-abi = { path = "../../../crates/aos-wasm-abi" }
+aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
 serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
