migrate blob-echo to sdk

--- a/examples/02-blob-echo/reducer/Cargo.toml
+++ b/examples/02-blob-echo/reducer/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 aos-air-types = { path = "../../../crates/aos-air-types" }
 aos-effects = { path = "../../../crates/aos-effects" }
-aos-wasm-abi = { path = "../../../crates/aos-wasm-abi" }
+aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
 serde = { version = "1", features = ["derive"] }
 serde_bytes = "0.11"
 serde_cbor = "0.11"
