--- a/examples/04-aggregator/reducer/Cargo.toml
+++ b/examples/04-aggregator/reducer/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 aos-air-exec = { path = "../../../crates/aos-air-exec" }
-aos-wasm-abi = { path = "../../../crates/aos-wasm-abi" }
+aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
 indexmap = "2"
 serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
