--- a/crates/aos-store/Cargo.toml
+++ b/crates/aos-store/Cargo.toml
@@ -9,6 +9,7 @@ aos-cbor = { path = "../aos-cbor" }
 aos-air-types = { path = "../aos-air-types" }
 serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
+serde_json = "1"
 anyhow = "1"
 thiserror = "1"
 hex = "0.4"
