--- a/examples/07-llm-summarizer/air/manifest.air.json
+++ b/examples/07-llm-summarizer/air/manifest.air.json
@@ -20,6 +20,18 @@
   "policies": [
     { "name": "demo/llm-policy@1" }
   ],
+  "secrets": [
+    {
+      "alias": "llm/api",
+      "version": 1,
+      "binding_id": "env:LLM_API_KEY",
+      "expected_digest": null,
+      "policy": {
+        "allowed_caps": [ "cap_llm" ],
+        "allowed_plans": [ "demo/summarize_plan@1" ]
+      }
+    }
+  ],
   "defaults": {
     "policy": "demo/llm-policy@1",
     "cap_grants": [
