--- a/crates/aos-testkit/Cargo.toml
+++ b/crates/aos-testkit/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
 wat = "1"
 rand = "0.8"
+log = "0.4"
 
 [dev-dependencies]
 tempfile = "3"
