--- a/examples/03-fetch-notify/air/manifest.air.json
+++ b/examples/03-fetch-notify/air/manifest.air.json
@@ -27,7 +27,7 @@
         "params": {
           "record": {
             "hosts": { "set": [ { "text": "example.com" } ] },
-            "methods": { "set": [ { "text": "GET" } ] }
+            "verbs": { "set": [ { "text": "GET" } ] }
           }
         }
       }
