--- a/examples/05-chain-comp/air/manifest.air.json
+++ b/examples/05-chain-comp/air/manifest.air.json
@@ -1,30 +1,62 @@
 {
   "$kind": "manifest",
   "schemas": [
-    { "name": "demo/ChainPhase@1" },
-    { "name": "demo/ChainHttpTarget@1" },
-    { "name": "demo/ChainSagaState@1" },
-    { "name": "demo/ChainState@1" },
-    { "name": "demo/ChainEvent@1" },
-    { "name": "demo/ChargeRequested@1" },
-    { "name": "demo/ReserveRequested@1" },
-    { "name": "demo/NotifyRequested@1" },
-    { "name": "demo/RefundRequested@1" }
+    {
+      "name": "demo/ChainPhase@1"
+    },
+    {
+      "name": "demo/ChainHttpTarget@1"
+    },
+    {
+      "name": "demo/ChainSagaState@1"
+    },
+    {
+      "name": "demo/ChainState@1"
+    },
+    {
+      "name": "demo/ChainEvent@1"
+    },
+    {
+      "name": "demo/ChargeRequested@1"
+    },
+    {
+      "name": "demo/ReserveRequested@1"
+    },
+    {
+      "name": "demo/NotifyRequested@1"
+    },
+    {
+      "name": "demo/RefundRequested@1"
+    }
   ],
   "modules": [
-    { "name": "demo/ChainComp@1" }
+    {
+      "name": "demo/ChainComp@1"
+    }
   ],
   "plans": [
-    { "name": "demo/charge_plan@1" },
-    { "name": "demo/reserve_plan@1" },
-    { "name": "demo/notify_plan@1" },
-    { "name": "demo/refund_plan@1" }
+    {
+      "name": "demo/charge_plan@1"
+    },
+    {
+      "name": "demo/reserve_plan@1"
+    },
+    {
+      "name": "demo/notify_plan@1"
+    },
+    {
+      "name": "demo/refund_plan@1"
+    }
   ],
   "caps": [
-    { "name": "demo/http_chain_cap@1" }
+    {
+      "name": "demo/http_chain_cap@1"
+    }
   ],
   "policies": [
-    { "name": "demo/http-chain-policy@1" }
+    {
+      "name": "demo/http-chain-policy@1"
+    }
   ],
   "defaults": {
     "policy": "demo/http-chain-policy@1",
@@ -34,8 +66,23 @@
         "cap": "demo/http_chain_cap@1",
         "params": {
           "record": {
-            "hosts": { "set": [ { "text": "example.com" } ] },
-            "methods": { "set": [ { "text": "POST" }, { "text": "PUT" } ] }
+            "hosts": {
+              "set": [
+                {
+                  "text": "example.com"
+                }
+              ]
+            },
+            "methods": {
+              "set": [
+                {
+                  "text": "POST"
+                },
+                {
+                  "text": "PUT"
+                }
+              ]
+            }
           }
         }
       }
@@ -44,14 +91,34 @@
   "module_bindings": {},
   "routing": {
     "events": [
-      { "event": "demo/ChainEvent@1", "reducer": "demo/ChainComp@1" }
+      {
+        "event": "demo/ChainEvent@1",
+        "reducer": "demo/ChainComp@1"
+      }
     ],
     "inboxes": []
   },
   "triggers": [
-    { "event": "demo/ChargeRequested@1", "plan": "demo/charge_plan@1", "correlate_by": "request_id" },
-    { "event": "demo/ReserveRequested@1", "plan": "demo/reserve_plan@1", "correlate_by": "request_id" },
-    { "event": "demo/NotifyRequested@1", "plan": "demo/notify_plan@1", "correlate_by": "request_id" },
-    { "event": "demo/RefundRequested@1", "plan": "demo/refund_plan@1", "correlate_by": "request_id" }
-  ]
+    {
+      "event": "demo/ChargeRequested@1",
+      "plan": "demo/charge_plan@1",
+      "correlate_by": "request_id"
+    },
+    {
+      "event": "demo/ReserveRequested@1",
+      "plan": "demo/reserve_plan@1",
+      "correlate_by": "request_id"
+    },
+    {
+      "event": "demo/NotifyRequested@1",
+      "plan": "demo/notify_plan@1",
+      "correlate_by": "request_id"
+    },
+    {
+      "event": "demo/RefundRequested@1",
+      "plan": "demo/refund_plan@1",
+      "correlate_by": "request_id"
+    }
+  ],
+  "air_version": "1"
 }
