must define builtins in manifests

--- a/examples/01-hello-timer/air/manifest.air.json
+++ b/examples/01-hello-timer/air/manifest.air.json
@@ -69,5 +69,10 @@
     "inboxes": []
   },
   "triggers": [],
-  "air_version": "1"
+  "air_version": "1",
+  "effects": [
+    {
+      "name": "sys/timer.set@1"
+    }
+  ]
 }
