--- a/examples/04-aggregator/air/manifest.air.json
+++ b/examples/04-aggregator/air/manifest.air.json
@@ -18,6 +18,12 @@
     },
     {
       "name": "demo/AggregateResponse@1"
+    },
+    {
+      "name": "sys/HttpRequestParams@1"
+    },
+    {
+      "name": "sys/HttpRequestReceipt@1"
     }
   ],
   "modules": [
@@ -84,5 +90,10 @@
       "correlate_by": "request_id"
     }
   ],
-  "air_version": "1"
+  "air_version": "1",
+  "effects": [
+    {
+      "name": "sys/http.request@1"
+    }
+  ]
 }
