--- a/examples/05-chain-comp/air/manifest.air.json
+++ b/examples/05-chain-comp/air/manifest.air.json
@@ -27,6 +27,30 @@
     },
     {
       "name": "demo/RefundRequested@1"
+    },
+    {
+      "name": "sys/BlobPutParams@1"
+    },
+    {
+      "name": "sys/BlobPutReceipt@1"
+    },
+    {
+      "name": "sys/BlobGetParams@1"
+    },
+    {
+      "name": "sys/BlobGetReceipt@1"
+    },
+    {
+      "name": "sys/BlobPutResult@1"
+    },
+    {
+      "name": "sys/BlobGetResult@1"
+    },
+    {
+      "name": "sys/HttpRequestParams@1"
+    },
+    {
+      "name": "sys/HttpRequestReceipt@1"
     }
   ],
   "modules": [
@@ -120,5 +144,16 @@
       "correlate_by": "request_id"
     }
   ],
-  "air_version": "1"
+  "air_version": "1",
+  "effects": [
+    {
+      "name": "sys/http.request@1"
+    },
+    {
+      "name": "sys/blob.put@1"
+    },
+    {
+      "name": "sys/blob.get@1"
+    }
+  ]
 }
