--- a/crates/aos-cli/Cargo.toml
+++ b/crates/aos-cli/Cargo.toml
@@ -6,9 +6,14 @@ publish = false
 
 [dependencies]
 aos-kernel = { path = "../aos-kernel" }
+aos-host = { path = "../aos-host" }
+aos-store = { path = "../aos-store" }
 clap = { version = "4", features = ["derive"] }
+serde_json = "1"
+serde_cbor = "0.11"
+tokio = { version = "1", features = ["full"] }
+anyhow = "1"
 
 [[bin]]
 name = "aos"
 path = "src/main.rs"
-
