--- a/crates/aos-host/Cargo.toml
+++ b/crates/aos-host/Cargo.toml
@@ -18,3 +18,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_cbor = "0.11"
 aos-store = { path = "../aos-store" }
+tempfile = "3"
