--- a/crates/aos-cli/Cargo.toml
+++ b/crates/aos-cli/Cargo.toml
@@ -18,6 +18,7 @@ tokio = { version = "1", features = ["full", "signal"] }
 anyhow = "1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt"] }
+dotenvy = "0.15"
 
 [[bin]]
 name = "aos"
