--- a/crates/aos-cli/Cargo.toml
+++ b/crates/aos-cli/Cargo.toml
@@ -14,8 +14,10 @@ camino = "1"
 clap = { version = "4", features = ["derive"] }
 serde_json = "1"
 serde_cbor = "0.11"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["full", "signal"] }
 anyhow = "1"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["fmt"] }
 
 [[bin]]
 name = "aos"
