--- a/crates/aos-host/Cargo.toml
+++ b/crates/aos-host/Cargo.toml
@@ -30,6 +30,7 @@ async-trait = "0.1"
 anyhow = "1"
 thiserror = "1"
 tracing = "0.1"
+base64 = "0.21"
 clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
