--- a/crates/aos-cli/Cargo.toml
+++ b/crates/aos-cli/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2024"
 publish = false
 
 [dependencies]
+aos-air-types = { path = "../aos-air-types" }
 aos-kernel = { path = "../aos-kernel" }
 aos-host = { path = "../aos-host" }
 aos-store = { path = "../aos-store" }
+aos-wasm-build = { path = "../aos-wasm-build" }
+camino = "1"
 clap = { version = "4", features = ["derive"] }
 serde_json = "1"
 serde_cbor = "0.11"
