--- a/crates/aos-host/Cargo.toml
+++ b/crates/aos-host/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-default = []
+# Real effect adapters are feature-gated so tests and consumers can opt-out of
+# networked dependencies. They are ON by default.
+default = ["adapter-http", "adapter-llm"]
+adapter-http = ["reqwest", "url"]
+adapter-llm = ["reqwest"]
 test-fixtures = ["aos-air-exec", "aos-wasm-abi", "indexmap", "wat", "sha2", "hex"]
 
 [dependencies]
@@ -36,6 +40,9 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_cbor = "0.11"
 tempfile = "3"
+reqwest = { version = "0.11", features = ["json"], optional = true }
+url = { version = "2", optional = true }
+once_cell = "1"
 
 [dev-dependencies]
 aos-air-exec = { path = "../aos-air-exec" }
