--- a/crates/aos-cli/Cargo.toml
+++ b/crates/aos-cli/Cargo.toml
@@ -11,7 +11,9 @@ aos-host = { path = "../aos-host" }
 aos-store = { path = "../aos-store" }
 aos-wasm-build = { path = "../aos-wasm-build" }
 camino = "1"
-clap = { version = "4", features = ["derive"] }
+clap = { version = "4", features = ["derive", "env"] }
+hex = "0.4"
+base64 = "0.22"
 serde_json = "1"
 serde_cbor = "0.11"
 tokio = { version = "1", features = ["full", "signal"] }
