--- a/crates/aos-cli/Cargo.toml
+++ b/crates/aos-cli/Cargo.toml
@@ -22,6 +22,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt"] }
 dotenvy = "0.15"
 jsonschema = "0.17"
+aos-cbor = { path = "../aos-cbor" }
 
 [[bin]]
 name = "aos"
