--- a/crates/aos-cli/Cargo.toml
+++ b/crates/aos-cli/Cargo.toml
@@ -21,6 +21,7 @@ anyhow = "1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt"] }
 dotenvy = "0.15"
+jsonschema = "0.17"
 
 [[bin]]
 name = "aos"
