--- a/crates/aos-examples/Cargo.toml
+++ b/crates/aos-examples/Cargo.toml
@@ -27,6 +27,7 @@ hex = "0.4"
 log = "0.4"
 env_logger = "0.11"
 walkdir = "2"
+tokio = { version = "1", features = ["rt", "time"] }
 
 [dev-dependencies]
 tempfile = "3"
