--- a/examples/01-hello-timer/reducer/Cargo.toml
+++ b/examples/01-hello-timer/reducer/Cargo.toml
@@ -11,3 +11,4 @@ crate-type = ["cdylib"]
 [dependencies]
 aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
 serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
+serde_cbor = { version = "0.11", default-features = false, features = ["alloc"] }
