--- a/examples/08-retry-backoff/reducer/Cargo.toml
+++ b/examples/08-retry-backoff/reducer/Cargo.toml
@@ -12,3 +12,4 @@ crate-type = ["cdylib", "rlib"]
 aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
 serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
 serde_json = { version = "1", default-features = false, features = ["alloc"] }
+serde_cbor = { version = "0.11", default-features = false, features = ["alloc"] }
