examples working with the enforcer

--- a/examples/03-fetch-notify/air/manifest.air.json
+++ b/examples/03-fetch-notify/air/manifest.air.json
@@ -41,6 +41,9 @@
   "modules": [
     {
       "name": "demo/FetchNotify@1"
+    },
+    {
+      "name": "sys/CapEnforceHttpOut@1"
     }
   ],
   "plans": [
@@ -73,7 +76,7 @@
                 }
               ]
             },
-            "verbs": {
+            "methods": {
               "set": [
                 {
                   "text": "GET"
