--- a/examples/07-llm-summarizer/air/manifest.air.json
+++ b/examples/07-llm-summarizer/air/manifest.air.json
@@ -53,6 +53,9 @@
   "modules": [
     {
       "name": "demo/LlmSummarizer@1"
+    },
+    {
+      "name": "sys/CapEnforceLlmBasic@1"
     }
   ],
   "plans": [
